--- a/package.json
+++ b/package.json
@@ -93,9 +93,9 @@
   "eslintConfig": {
     "extends": "react-app",
     "rules": {
-      "semi": "error",
-      "indent": ["error", 2],
-      "keyword-spacing": ["error", { "before": true }],
+      "semi": "warn",
+      "indent": ["warn", 2],
+      "keyword-spacing": ["warn", { "before": true }],
       "object-curly-spacing": ["warn", "always"]
     }
   }
