--- a/package.json
+++ b/package.json
@@ -46,21 +46,19 @@
     "webpack": "1.13.2",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
+    "redux-logger": "^2.7.4",
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
-    "css-loader": "^0.25.0",
-    "postcss-loader": "^1.1.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-input-range": "^0.9.3",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "react-test-renderer": "^15.3.2",
     "redux": "^3.6.0",
-    "redux-logger": "^2.7.4",
-    "redux-thunk": "^2.1.0",
-    "style-loader": "^0.13.1"
+    "redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -94,9 +92,20 @@
     "extends": "react-app",
     "rules": {
       "semi": "warn",
-      "indent": ["warn", 2],
-      "keyword-spacing": ["warn", { "before": true }],
-      "object-curly-spacing": ["warn", "always"]
+      "indent": [
+        "warn",
+        2
+      ],
+      "keyword-spacing": [
+        "warn",
+        {
+          "before": true
+        }
+      ],
+      "object-curly-spacing": [
+        "warn",
+        "always"
+      ]
     }
   }
 }
