--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "promise": "7.1.1",
     "react-dev-utils": "^0.3.0",
     "recursive-readdir": "2.1.0",
+    "redux-logger": "^2.7.4",
     "rimraf": "2.5.4",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
@@ -46,7 +47,6 @@
     "webpack": "1.13.2",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
-    "redux-logger": "^2.7.4",
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
@@ -56,6 +56,8 @@
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
+    "react-scroll": "^1.4.4",
+    "react-slick": "^0.14.5",
     "react-test-renderer": "^15.3.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
