--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "react-slick": "^0.14.5",
     "react-test-renderer": "^15.3.2",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "slick-carousel": "^1.6.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
